# math

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
Prime/: prime.cxx  prime.py
Prime/include/: prime.hxx
Resources/Books/Math/Pre-Alegbra/: names.txt
Server/: README.md  client.py  client_win.cxx  server.py  server_win.cxx
Server/include/: client_win.hxx  server_win.hxx
